# Cr

./: .atom-build.yml  .gitignore  .travis.yml  Cr.cabal  Cr.cfg  Makefile  README.md  appveyor.yml  build.bat  shake  shake.it.hs  stack.yaml
src/: Base.hs  CommonDataStorage.hs  Cr.hs  CustomDownloader.hs  CustomInstaller.hs  Depot.hs  Downloader.hs  Gclient.hs  Google.hs  InstallHelper.hs  Installer.hs  Misc.hs  Mozilla.hs  Win.hs  Yaml.hs
