name: Cr
version: 0.7.0
license: BSD3

build-type: Simple
cabal-version: >= 1.6

Executable    Cr
  Main-Is:    Cr.hs
  Hs-Source-Dirs: src
  Build-Depends:
      base >= 4.3 && < 666
    , base-unicode-symbols
    , lifted-base
    , bytestring
    , http-conduit
    , network
    , utf8-string
    , HTTP
    , process
    , conduit
    , resourcet
    , conduit-extra >= 1.1.0
    , http-types
    , transformers
    , directory
    , filepath
    , executable-path
    , yaml
    , Win32
