name: Cr
version: 0.8.0
license: BSD3

build-type: Simple
cabal-version: >= 1.6

Executable      Cr
  Main-Is:      Cr.hs
  Ghc-Options:  -Wall -O3 -rtsopts
  Other-Modules:
    Downloader
    InstallHelper
    Installer
    Misc
    Paths_Cr
    Win
    Yaml
  Hs-Source-Dirs: src
  Build-Depends:
      base >= 4.3 && < 666
    , base-unicode-symbols
    , lifted-base
    , bytestring
    , http-conduit
    , network
    , utf8-string
    , HTTP
    , process
    , conduit
    , resourcet
    , conduit-extra >= 1.1.0
    , http-types
    , transformers
    , directory
    , filepath
    , executable-path
    , aeson
    , yaml
    , Win32
